css/style.css
body{
    margin: 0;
    padding: 0;
}
/*  home page  */
.homePage{
    height: 100vh;
    background-image:url("../images/back.jpg");
    width:100vw;
    display:block;
    background-size: cover;
    background-position: center;
}
.containButtons{
    position: fixed;
    top: 50vh;
    left: calc(50vw - 275px);
    
}
.containButtons input {
    font-size: 25px;
    border-radius: 15px;
    transition-duration: 0.4s;
    background-color: rgb(3, 177, 244);
    padding: 5px 40px;
    margin: 10px;

}
.containButtons input:hover{
    color:white;
}
.container-fluid img{
    width: 100%;
    height: auto;
}

/* The game */
.container{
    display:none;
}

#board {
    height: 100vh;
    width: 100vh;
    font-size: 0;
    background-image: url('http://wvaq.com/wp-content/uploads/sites/89/sky.jpg');
    background-size: contain;
}

#board div{
    height: 5%;
    width: 5%;
    display: inline-block;
    overflow: scroll;
}

.sky {
    /* background-color:rgb(104, 232, 255); */
    background-color: transparent;
}
.dirt {
    background-image: url('../images/dirt.jpg');
    background-size: cover;
}
.dirtTop {
    background-image: url('../images/dirtTop.png');
    background-size: cover;
}

.cloud{
    background-color: whitesmoke;
}
.rock{
    background-image: url('../images/rock.png');
    background-size: cover;
}
.wood{
    background-image: url('../images/wood.jpg');
    background-size: cover;

}
.money{
    background-image: url('../images/money.png');
    background-size: cover;

}
.woodTop{
    background-image: url('../images/woodTop.png');
    background-size: cover;

}
/* navbar */
#navbar{
    height: 100vh;
    background-color: black;
}

#navbar button {
    height: 50px;
    width: 50px;
    display: block;
    margin: 40px 40%;

}

.disable {
    pointer-events: none;
}
#rockTools{
    background-image: url('../images/rockTools.png');
    background-size: contain;
}

#woodTools{
    background-image: url('../images/woodTool.png');
    background-size: contain;
}
#moneyTools{
    background-image: url('../images/moneyTools.png');
    background-size: contain;
    background-repeat: no-repeat;
}

#dirtTools{
    background-image: url('../images/dirtTool.png');
    background-size: contain;

}
#select{
    border:1px solid white;
    background-color: transparent;
}
@media (max-width: 1024px) {

    #navbar {
        height: 100%;
        width: 100vw;
        font-size: 0;
        margin: 15px;
    }
    #navbar button {
        display: inline-block;
        margin: 40px;
     }
     #board {
        height: 100vw;
        width: 100vw;
    }
    .container {
        display: none;
        margin: 0;
        padding: 0;
    }

 }

